--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -7713,9 +7713,717 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fbffdd2e",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "421e4e98",
+   "metadata": {},
+   "source": [
+    "### Series\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21c00210",
+   "metadata": {},
+   "source": [
+    "1.Create a pandas series containing the top 5 programming languages used in 2021, along with their respective popularity index (in descending order). Then, extract the third item from the series."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8dcc03d1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python        29.5\n",
+      "JavaScript    19.7\n",
+      "Java          15.0\n",
+      "C++            7.4\n",
+      "C#             4.8\n",
+      "dtype: float64\n",
+      "The third item in the series is:  15.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a pandas series\n",
+    "programming_languages = pd.Series({\n",
+    "    'Python': 29.5,\n",
+    "    'JavaScript': 19.7,\n",
+    "    'Java': 15.0,\n",
+    "    'C++': 7.4,\n",
+    "    'C#': 4.8\n",
+    "})\n",
+    "\n",
+    "\n",
+    "# Sort the series in descending order based on popularity index\n",
+    "programming_languages = programming_languages.sort_values(ascending=False)\n",
+    "\n",
+    "\n",
+    "# Extract the third item from the series\n",
+    "third_item = programming_languages[2]\n",
+    "\n",
+    "\n",
+    "print(programming_languages)\n",
+    "print(\"The third item in the series is: \", third_item)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7ce55f3",
+   "metadata": {},
+   "source": [
+    "2.Create a Pandas series with the following data: [1, 3, 5, 7, 9]. Then, change the index to ['a', 'b', 'c', 'd', 'e'].\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e53e4f6c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    3\n",
+      "2    5\n",
+      "3    7\n",
+      "4    9\n",
+      "dtype: int64\n",
+      "a    1\n",
+      "b    3\n",
+      "c    5\n",
+      "d    7\n",
+      "e    9\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1=pd.Series([1,3,5,7,9])\n",
+    "print(s1)\n",
+    "s1.index=['a','b','c','d','e']\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c6a1b8c",
+   "metadata": {},
+   "source": [
+    "3.Create a Pandas series with the following data: {'apples': 3, 'bananas': 2, 'oranges': 1}. Then, access the value of 'bananas'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "62a508cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples     3\n",
+      "bananas    2\n",
+      "oranges    1\n",
+      "dtype: int64\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits=pd.Series({'apples': 3, 'bananas': 2, 'oranges': 1})\n",
+    "print(fruits)\n",
+    "print(fruits['bananas'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97ce3183",
+   "metadata": {},
+   "source": [
+    "4.Create a Pandas series with the following data: [1, 2, 3, 4, 5]. Then, filter the series to only include values greater than 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3ed849e3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "dtype: int64\n",
+      "Filtered series :\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "s2=pd.Series([1,2,3,4,5])\n",
+    "print(s2)\n",
+    "filtered_s2=s2[s2>2]\n",
+    "print(\"Filtered series :\")\n",
+    "print(filtered_s2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5ba9896",
+   "metadata": {},
+   "source": [
+    "5.Create a Pandas series with the following data: {'apples': 3, 'bananas': 2, 'oranges': 1}. Then, add a new item to the series with the key 'pears' and the value 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "64e9b456",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples     3\n",
+      "bananas    2\n",
+      "oranges    1\n",
+      "dtype: int64\n",
+      "apples     3\n",
+      "bananas    2\n",
+      "oranges    1\n",
+      "pears      4\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "s3=pd.Series({'apples': 3, 'bananas': 2, 'oranges': 1})\n",
+    "print(s3)\n",
+    "s3['pears']=4\n",
+    "print(s3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3f3db5c",
+   "metadata": {},
+   "source": [
+    "6.Create a Pandas series with the following data: [1, 2, 3, 4, 5]. Then, calculate the sum, mean, and standard deviation of the series.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "17e0daa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum :  15\n",
+      "Mean :  3.0\n",
+      "Standard deviation :  1.5811388300841898\n"
+     ]
+    }
+   ],
+   "source": [
+    "s4=pd.Series([1,2,3,4,5])\n",
+    "print(\"Sum : \",s4.sum())\n",
+    "print(\"Mean : \",s4.mean())\n",
+    "print(\"Standard deviation : \",s4.std())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "914947e4",
+   "metadata": {},
+   "source": [
+    "### DataFrame\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cc48d4a",
+   "metadata": {},
+   "source": [
+    "1.Create a dataframe with the following columns: name, age, and gender. The dataframe should have 10 rows of data, with the following values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2ad03604",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>28</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jill</td>\n",
+       "      <td>32</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  Age Gender\n",
+       "0  Alice   25      F\n",
+       "1    Bob   28      M\n",
+       "2   Jill   32      M"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1=pd.DataFrame({'name':['Alice','Bob','Jill'],\n",
+    "                'Age':[25,28,32],\n",
+    "                'Gender':['F','M','M']})\n",
+    "d1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b583bcb",
+   "metadata": {},
+   "source": [
+    "2.Add a new column to the dataframe created in question 1, called occupation. The values for this column should be Programmer, Manager, and Analyst, corresponding to the rows in the dataframe.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2fd6aa84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Occupation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Programmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>28</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jill</td>\n",
+       "      <td>32</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Analyst</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  Age Gender  Occupation\n",
+       "0  Alice   25      F  Programmer\n",
+       "1    Bob   28      M     Manager\n",
+       "2   Jill   32      M     Analyst"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1['Occupation']=['Programmer',' Manager',  'Analyst']\n",
+    "d1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e07b4fa2",
+   "metadata": {},
+   "source": [
+    "3.Select the rows of the dataframe where the age is greater than or equal to 30."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5dc06ca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Occupation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jill</td>\n",
+       "      <td>32</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Analyst</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   name  Age Gender Occupation\n",
+       "2  Jill   32      M    Analyst"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_d1=d1[d1['Age']>30]\n",
+    "filtered_d1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccc87387",
+   "metadata": {},
+   "source": [
+    "4.Sort the dataframe by age in descending order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "194d650c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Occupation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jill</td>\n",
+       "      <td>32</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Analyst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>28</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Programmer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  Age Gender  Occupation\n",
+       "2   Jill   32      M     Analyst\n",
+       "1    Bob   28      M     Manager\n",
+       "0  Alice   25      F  Programmer"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_d1=d1.sort_values(by='Age',ascending=False)\n",
+    "sorted_d1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e7f4a77",
+   "metadata": {},
+   "source": [
+    "5.Filter the DataFrame to only show people who are female."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "23a3fcd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Occupation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Programmer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  Age Gender  Occupation\n",
+       "0  Alice   25      F  Programmer"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "female_d1=d1[d1['Gender']=='F']\n",
+    "female_d1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61840402",
+   "metadata": {},
+   "source": [
+    "6.Calculate the average age of people in the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "94a1f72e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.333333333333332\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d1['Age'].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d91dfd8",
+   "metadata": {},
+   "source": [
+    "7. Convert this dataframe to a csv file and read that csv file, finally display the contents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f8e99cac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert DataFrame to CSV file\n",
+    "d1.to_csv('D1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f37b99aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Read CSV file and display contents\n",
+    "d1_read=pd.read_csv('D1.csv')\n",
+    "d1_read"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66aa5017",
+   "id": "1e194b6e",
    "metadata": {},
    "outputs": [],
    "source": []
