--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -380,11 +380,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "2ae9668e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "arr4=np.array([\n",
     "    [\n",
     "        [\n",
@@ -403,7 +404,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "7896d9e3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -418,6 +421,34 @@
    ],
    "source": [
     "arr4.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a35a6787",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[ 1,  2,  3],\n",
+       "         [ 4,  5,  6]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 7,  8,  9],\n",
+       "         [10, 11, 12]]]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr4"
    ]
   },
   {
