--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -2782,7 +2782,9 @@
    "cell_type": "code",
    "execution_count": 79,
    "id": "9ab4b31c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5916,7 +5918,7 @@
    ],
    "source": [
     "#Calculating GDP per capita=GDP/Population\n",
-    "df5['Population']/df5['GDP']"
+    "df5['GDP']/df5['Population']"
    ]
   },
   {
@@ -7714,7 +7716,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbffdd2e",
+   "id": "39ef7302",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -7722,7 +7724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "421e4e98",
+   "id": "0aba0f35",
    "metadata": {},
    "source": [
     "### Series\n"
@@ -7730,7 +7732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c00210",
+   "id": "3ce7a890",
    "metadata": {},
    "source": [
     "1.Create a pandas series containing the top 5 programming languages used in 2021, along with their respective popularity index (in descending order). Then, extract the third item from the series."
@@ -7739,7 +7741,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8dcc03d1",
+   "id": "8541f108",
    "metadata": {
     "scrolled": true
    },
@@ -7787,7 +7789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ce55f3",
+   "id": "8c797bd1",
    "metadata": {},
    "source": [
     "2.Create a Pandas series with the following data: [1, 3, 5, 7, 9]. Then, change the index to ['a', 'b', 'c', 'd', 'e'].\n"
@@ -7796,7 +7798,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e53e4f6c",
+   "id": "96ec9583",
    "metadata": {
     "scrolled": true
    },
@@ -7829,7 +7831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c6a1b8c",
+   "id": "95ceed85",
    "metadata": {},
    "source": [
     "3.Create a Pandas series with the following data: {'apples': 3, 'bananas': 2, 'oranges': 1}. Then, access the value of 'bananas'."
@@ -7838,7 +7840,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "62a508cd",
+   "id": "e5bf6f73",
    "metadata": {},
    "outputs": [
     {
@@ -7861,7 +7863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97ce3183",
+   "id": "cc439258",
    "metadata": {},
    "source": [
     "4.Create a Pandas series with the following data: [1, 2, 3, 4, 5]. Then, filter the series to only include values greater than 2."
@@ -7870,7 +7872,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3ed849e3",
+   "id": "3adc42c9",
    "metadata": {
     "scrolled": true
    },
@@ -7903,7 +7905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ba9896",
+   "id": "e861f4bd",
    "metadata": {},
    "source": [
     "5.Create a Pandas series with the following data: {'apples': 3, 'bananas': 2, 'oranges': 1}. Then, add a new item to the series with the key 'pears' and the value 4."
@@ -7912,7 +7914,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "64e9b456",
+   "id": "5da14b3d",
    "metadata": {},
    "outputs": [
     {
@@ -7940,7 +7942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f3db5c",
+   "id": "c7d47e65",
    "metadata": {},
    "source": [
     "6.Create a Pandas series with the following data: [1, 2, 3, 4, 5]. Then, calculate the sum, mean, and standard deviation of the series.\n"
@@ -7949,7 +7951,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "17e0daa2",
+   "id": "3d33fd8d",
    "metadata": {},
    "outputs": [
     {
@@ -7971,7 +7973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "914947e4",
+   "id": "9fc22b7d",
    "metadata": {},
    "source": [
     "### DataFrame\n"
@@ -7979,7 +7981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cc48d4a",
+   "id": "05a7ad04",
    "metadata": {},
    "source": [
     "1.Create a dataframe with the following columns: name, age, and gender. The dataframe should have 10 rows of data, with the following values\n"
@@ -7988,7 +7990,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2ad03604",
+   "id": "31d68914",
    "metadata": {},
    "outputs": [
     {
@@ -8061,7 +8063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b583bcb",
+   "id": "d7071e8e",
    "metadata": {},
    "source": [
     "2.Add a new column to the dataframe created in question 1, called occupation. The values for this column should be Programmer, Manager, and Analyst, corresponding to the rows in the dataframe.\n"
@@ -8070,7 +8072,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2fd6aa84",
+   "id": "84335b70",
    "metadata": {},
    "outputs": [
     {
@@ -8145,7 +8147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e07b4fa2",
+   "id": "3a104af6",
    "metadata": {},
    "source": [
     "3.Select the rows of the dataframe where the age is greater than or equal to 30."
@@ -8154,7 +8156,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5dc06ca1",
+   "id": "30d58d20",
    "metadata": {},
    "outputs": [
     {
@@ -8213,7 +8215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc87387",
+   "id": "797947b0",
    "metadata": {},
    "source": [
     "4.Sort the dataframe by age in descending order."
@@ -8222,7 +8224,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "194d650c",
+   "id": "2cdc47ac",
    "metadata": {},
    "outputs": [
     {
@@ -8297,7 +8299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e7f4a77",
+   "id": "39fbb2a7",
    "metadata": {},
    "source": [
     "5.Filter the DataFrame to only show people who are female."
@@ -8306,7 +8308,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "23a3fcd7",
+   "id": "79386155",
    "metadata": {},
    "outputs": [
     {
@@ -8365,7 +8367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61840402",
+   "id": "047802dd",
    "metadata": {},
    "source": [
     "6.Calculate the average age of people in the DataFrame."
@@ -8374,7 +8376,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "94a1f72e",
+   "id": "c15b69a2",
    "metadata": {},
    "outputs": [
     {
@@ -8391,7 +8393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d91dfd8",
+   "id": "a17c4ea8",
    "metadata": {},
    "source": [
     "7. Convert this dataframe to a csv file and read that csv file, finally display the contents."
@@ -8400,7 +8402,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f8e99cac",
+   "id": "a568d1be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8410,12 +8412,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "f37b99aa",
+   "execution_count": 31,
+   "id": "31f98d36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Occupation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Programmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>28</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jill</td>\n",
+       "      <td>32</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Analyst</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   name  Age Gender  Occupation\n",
+       "0           0  Alice   25      F  Programmer\n",
+       "1           1    Bob   28      M     Manager\n",
+       "2           2   Jill   32      M     Analyst"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Read CSV file and display contents\n",
+    "# Read CSV file and display contents\n",
     "d1_read=pd.read_csv('D1.csv')\n",
     "d1_read"
    ]
@@ -8423,7 +8494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e194b6e",
+   "id": "d6d9d5fa",
    "metadata": {},
    "outputs": [],
    "source": []
